--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -295,3 +295,10 @@ service folio_daemon /system/bin/folio_daemon
     class late_start
     user system
     group system uhid
+    disabled
+
+on property:init.svc.zygote=running
+    start vendor.folio_daemon
+
+on property:init.svc.zygote=stopped
+    stop vendor.folio_daemon
