--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -294,4 +294,4 @@ on property:persist.sys.usb.gps.notify=2
 service folio_daemon /system/bin/folio_daemon
     class late_start
     user system
-    group system
+    group system uhid
