--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -290,3 +290,8 @@ on property:persist.sys.usb.gps.notify=1
 
 on property:persist.sys.usb.gps.notify=2
     write /sys/class/type-c/info/vbus_status 0
+
+service folio_daemon /system/bin/folio_daemon
+    class late_start
+    user system
+    group system
