s2: rootdir: Use folio_daemon instead vendor.folio_daemon
I don't want to change commit I65e1b72745719f2540bff7cab8e556725486bcad

Change-Id: I07067836b22bebff748c803573d57f1fe21ffa40

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -298,7 +298,7 @@ service folio_daemon /system/bin/folio_daemon
     disabled
 
 on property:init.svc.zygote=running
-    start vendor.folio_daemon
+    start folio_daemon
 
 on property:init.svc.zygote=stopped
-    stop vendor.folio_daemon
+    stop folio_daemon
